[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/1 Centipede/Centipede_walk.png" type="Texture" id=1]
[ext_resource path="res://Enemy1.gd" type="Script" id=2]
[ext_resource path="res://Enemies/1 Centipede/Centipede_attack2.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Attack",
"speed": 20.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 8.0
height = 16.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20.8194, 12.3307 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 37.1531, 12.3575 )

[node name="Enemy1" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = Vector2( 80, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.33371 )
frames = SubResource( 5 )
animation = "Walk"
frame = 1
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16.3337 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -13.7002, 24 )
shape = SubResource( 7 )

[node name="LeftDetector" type="RayCast2D" parent="."]
position = Vector2( -8.67647, 8.67648 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="RightDetector" type="RayCast2D" parent="."]
position = Vector2( 35.3733, 6.67421 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( 0.667419, 22.0249 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -14.3495, 23.3597 )
shape = SubResource( 18 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
